# ozzylogik_test_task

./: README.md
client/: CMakeLists.txt  README.md
client/src/: CMakeLists.txt  TcpClient.cpp  TcpClient.h  main.cpp
server/: CMakeLists.txt  README.md
server/src/: CMakeLists.txt  main.cpp
server/src/algorithm/: json_convertor.cpp  json_convertor.hpp  words_counter.cpp  words_counter.hpp
server/src/logging/: utils.cpp  utils.hpp
server/src/server/: session.cpp  session.hpp  tcp_server.cpp  tcp_server.hpp
